# osg_world

./: .gitignore  CMakeLists.txt  KeyboardHandler.h  README.md  TestManualCamera.cpp  TestMatrix.cpp  Testhome.cpp  main.cpp  osgprerender.cpp  plot_reference_frame.cpp  take_picture.cpp
world_sim/: CMakeLists.txt  FollowNodeManip.h  TestMultiCamera.cpp  setupScene.cpp
